--- a/binary_search/CMakeLists.txt
+++ b/binary_search/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.21)
-project(introduction)
+project(binary_search)
 
 set(CMAKE_CXX_STANDARD 14)
 
-add_executable(introduction main.cpp)
+add_executable(binary_search main.cpp)
