--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,5 +5,6 @@ set(CMAKE_CXX_STANDARD 14)
 
 add_subdirectory("${PROJECT_SOURCE_DIR}/linear_search" "${PROJECT_SOURCE_DIR}/linear_search/output")
 add_subdirectory("${PROJECT_SOURCE_DIR}/binary_search" "${PROJECT_SOURCE_DIR}/binary_search/output")
+add_subdirectory("${PROJECT_SOURCE_DIR}/shortest_path" "${PROJECT_SOURCE_DIR}/shortest_path/output")
 
 add_executable(Alogirthms_PI21E main.cpp)
